// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cell should create a cell 1`] = `
Object {
  "data": Object {
    "createCell": Object {
      "type": "Test type",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;

exports[`Cell should get a cell 1`] = `
Object {
  "data": Object {
    "getCell": Object {
      "type": "a-type",
    },
  },
  "errors": undefined,
  "extensions": undefined,
  "http": Object {
    "headers": Headers {
      Symbol(map): Object {},
    },
  },
}
`;
